--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ openai>=1.0.0
 pydantic>=2.0
 SQLAlchemy>=2.0
 psycopg[binary]>=3.1
+torch>=2.1
+transformers>=4.39
+peft>=0.8.0
+fastapi>=0.110
+uvicorn[standard]>=0.24
+jinja2>=3.1
